--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,6 +1,8 @@
 .header {
+    position: fixed;
     display: flex;
     align-items: center;
+    width: 100%;
     height: 120px;
     padding: 16px 32px;
     background-color: #b7f4ff;
@@ -9,3 +11,4 @@
 .logo {
     margin-left: auto;
 }
+
